--- a/ejerciciosJunior.ipynb
+++ b/ejerciciosJunior.ipynb
@@ -141,18 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vamos a jugar piedra, papel o tijeras\n",
+      "Eleccion de la computadora: tijeras\n",
+      "Ganaste!\n"
+     ]
+    }
+   ],
    "source": [
     "##Rock, paper, scissors\n",
     "\n",
-    "import random\n",
+    "from random import randint\n",
     "\n",
     "\n",
     "choice = [\"piedra\",\"papel\",\"tijeras\"]\n",
     "\n",
-    "computer = choice[radint(0,2)]\n",
+    "computer = choice[randint(0,2)]\n",
     "\n",
     "print(\"Vamos a jugar piedra, papel o tijeras\")\n",
     "jugador = input(\"Ingrese su eleccion: \").lower()\n",
@@ -179,20 +189,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elige un numero del 1 al 50 y adivinare si estas dentro del rango\n",
+      "Intente con un numero mas chico\n",
+      "Intente con un numero mas chico\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [5], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     16\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mIntente con un numero mas chico\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 17\u001b[0m         opc \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mIngrese un numero del 1 al 50\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAdviniaste el numero!\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "##Guess the number\n",
     "\n",
     "print(\"Elige un numero del 1 al 50 y adivinare si estas dentro del rango\")\n",
     "\n",
-    "import random\n",
     "\n",
     "from random import randrange\n",
     "\n",
-    "num = random.randrange(1,50)\n",
-    "opc = input(\"Ingresa un numero del 1 al 50\")\n",
+    "num = randrange(1,50)\n",
+    "opc = int(input(\"Ingresa un numero del 1 al 50\"))\n",
     "\n",
     "while opc != num:\n",
     "    if opc < num:\n",
